
CREATE TABLE with (
    common DATE,
    then TEXT,
    whole VARCHAR(50),
    PRIMARY KEY (common),
    FOREIGN KEY (common) REFERENCES fill(common)
);

CREATE TABLE fill (
    century VARCHAR(50),
    task DATE,
    PRIMARY KEY (century),
    FOREIGN KEY (century) REFERENCES suddenly(century)
);

CREATE TABLE suddenly (
    trip DATE,
    family TEXT,
    agree VARCHAR(50),
    PRIMARY KEY (trip),
    FOREIGN KEY (trip) REFERENCES him(trip)
);

CREATE TABLE him (
    individual VARCHAR(50),
    increase DATE,
    PRIMARY KEY (individual),
    FOREIGN KEY (individual) REFERENCES network(individual)
);

CREATE TABLE network (
    tree DATE,
    even TEXT,
    standard VARCHAR(50),
    PRIMARY KEY (tree),
    FOREIGN KEY (tree) REFERENCES city(tree)
);

CREATE TABLE city (
    lay VARCHAR(50),
    street DATE,
    PRIMARY KEY (lay),
    FOREIGN KEY (lay) REFERENCES hot(lay)
);

CREATE TABLE hot (
    cause DATE,
    film TEXT,
    politics VARCHAR(50),
    PRIMARY KEY (cause),
    FOREIGN KEY (cause) REFERENCES leader(cause)
);

CREATE TABLE leader (
    now VARCHAR(50),
    test DATE,
    PRIMARY KEY (now),
    FOREIGN KEY (now) REFERENCES make(now)
);

CREATE TABLE make (
    pattern DATE,
    detail TEXT,
    ball VARCHAR(50),
    PRIMARY KEY (pattern),
    FOREIGN KEY (pattern) REFERENCES with(pattern)
);
